--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,9 +1,9 @@
 ---
-import Layout from '../components/Layout.astro';
 import FeedbackForm from '../components/FeedbackForm.astro';
+import Primary from '../layouts/Primary.astro';
 ---
 
-<Layout title="Astro Toolbox">
+<Primary title="Astro Toolbox">
   <main>
     <div class="header">
       <div class="logo">
@@ -46,7 +46,7 @@ import FeedbackForm from '../components/FeedbackForm.astro';
       > for you!
     </footer>
   </main>
-</Layout>
+</Primary>
 
 <style>
   :root {
