--- a/src/layouts/Primary.astro
+++ b/src/layouts/Primary.astro
@@ -1,4 +1,5 @@
 ---
+import Footer from '../components/Footer.astro';
 import Header from '../components/Header.astro';
 
 export interface Props {
@@ -17,19 +18,19 @@ const { title } = Astro.props as Props;
     <title>{title}</title>
   </head>
   <body>
-    <div class="p-0">
+    <div class="p-0 min-h-screen flex flex-col">
       <Header />
-      <section class="pt-6 px-4 mx-auto max-w-screen-xl sm:px-6 lg:px-20 border-2">
-
-      </section>
-      <slot />
+      <div class="transition-all mx-0 sm:mx-0 lg:mx-16 flex-grow flex">
+        <slot />
+      </div>
+      <Footer />   
     </div>    
   </body>
 </html>
 
 <style>
   :global(code) {
-    font-family: Menlo, Monaco, Lucida Console, Liberation Mono,
+    font-family: Cinzel, Monaco, Lucida Console, Liberation Mono,
       DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace;
   }
 </style>
