--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,7 +8,7 @@ import cover from '@images/cover.jpg?url';
   <main>
     <div class="flex mx-1 lg:mx-3">
       <div class="w-1/2 bg-slate-200 flex justify-center">
-        <img src={cover} alt="" />
+        <img class="object-cover" src={cover} alt="" />
       </div>
       <div class="w-1/2 bg-slate-600 p-4 text-slate-300 space-y-6">
         <h1 class="text-4xl">Hi!</h1>
