--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,16 @@
 ---
+import { Image } from 'astro:assets';
+
 import Primary from '@layouts/Primary.astro';
 
-import cover from '@images/cover.jpg?url';
+import cover from '@images/cover.jpg';
 ---
 
 <Primary title="Manomita's Bio">
   <main>
     <div class="flex mx-1 lg:mx-3">
       <div class="w-1/2 bg-slate-200 flex justify-center">
-        <img class="object-cover" src={cover} alt="" />
+        <Image class="object-cover" src={cover} alt="Cover Image" />
       </div>
       <div class="w-1/2 bg-slate-600 p-4 text-slate-300 space-y-6">
         <h1 class="text-4xl">Hi!</h1>
