--- a/src/components/Row.astro
+++ b/src/components/Row.astro
@@ -1,7 +1,8 @@
 ---
 import Content from './Content.astro';
+
 const { rows } = Astro.props;
 ---
-<div class={`grid grid-cols-${rows.length} gap-2`}>
+<div class={`grid grid-rows-1 grid-cols-${rows.length} gap-2`}>
     {rows.map((row: any) => <Content data={row} />)}
 </div>
