--- a/src/layouts/Primary.astro
+++ b/src/layouts/Primary.astro
@@ -20,7 +20,7 @@ const { title } = Astro.props as Props;
   <body>
     <div class="p-0 min-h-screen flex flex-col">
       <Header />
-      <div class="transition-all mx-0 sm:mx-0 lg:mx-16 flex-grow flex">
+      <div class="transition-all flex-grow flex">
         <slot />
       </div>
       <Footer />   
