--- a/src/components/Column.astro
+++ b/src/components/Column.astro
@@ -2,6 +2,6 @@
 import Content from "./Content.astro";
 const { columns } = Astro.props;
 ---
-<div class={`grid grid-rows-${columns.length} gap-2`}>
+<div class={`grid grid-cols-1 grid-rows-${columns.length} gap-2`}>
     {columns.map((column: any) => <Content data={column} />)}
 </div>
