--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,7 +5,7 @@
 <!-- ====== Navbar Section Start -->
 <header class="bg-white">
   <nav>
-    <div class="mx-2 sm:mx-0 lg:mx-16 pt-0 sm:pt-4 lg:pt-6 pb-0 sm:pb-1 lg:pb-3">
+    <div class="mx-2 sm:mx-0 lg:mx-12 px-1 pt-0 sm:pt-4 lg:pt-6 pb-0 sm:pb-1 lg:pb-3">
       <div class="relative flex h-16 items-center justify-between">
         <div class="absolute inset-y-0 left-0 flex items-center sm:hidden">
           <!-- Mobile menu button-->
